# auxly-memory-cli

./: .clauderules  .dockerignore  .gitignore  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  go.mod  go.sum  main.go
.gsd/: CODEBASE.md
assets/: embed.go  logo.ans  logo.ans.bak  logo_v2_halfblock.ans.bak
cmd/: agents.go  approve.go  banner.go  bridge.go  capture.go  capture_test.go  connect.go  connect_dedup_test.go  connect_install_verify_test.go  connect_launcher_test.go  connect_multiplex_test.go  connect_probe_retry_test.go  connect_selftest.go  connect_selftest_test.go  connect_validate_test.go  dependencies.go  doctor.go  doctor_test.go  encrypt.go  encrypt_test.go  export.go  help_test.go  hooks.go  hooks_autowire_test.go  hooks_codex.go  hooks_codex_test.go  hooks_shell.go  hooks_shell_test.go  hooks_test.go  host.go  host_backoff_test.go  host_clients.go  host_e2e_test.go  host_invite.go  host_invite_test.go  host_multirelay_test.go  host_reap_test.go  host_reconcile.go  host_reconcile_test.go  host_test.go  (+47 more)
docs/: memory-rework-plan.md
mcp/: linkguard.go  primer.go  primer_test.go  recall_analytics_test.go  recall_sharing_test.go  server.go  server_crypto_test.go  server_sharing_test.go  server_test.go  server_trust_test.go  supersede.go  supersede_test.go
metrics/: clones.csv  downloads.csv  downloads_by_asset.csv  views.csv
npm/: README.md  install.js  package.json
pip/: README.md  pyproject.toml
pip/auxly_cli/: __init__.py  _runner.py  _verify.py
(+255 files in other folders)
